cabal-version:       >=1.10

name:                sql-overview
version:             0.1.0.0
build-type:          Simple

executable AddLinks
  main-is:             AddLinks.lhs
  build-depends:       base >=4 && <5
  default-language:    Haskell2010


executable GrammarToAsciidoc
  main-is:             GrammarToAsciidoc.lhs
  build-depends:       base >=4 && <5,
                       regex-compat
  default-language:    Haskell2010
